# Staking-Poc

./: .gitignore  Cargo.toml  LICENSE  do.sh  last-deploy.json
client/: package.json
client/src/: constants.js  instruction.js  layout.js  staking-store.js
client/src/util/: account.js  send-and-confirm-transaction.js
client/test/: e2e.int.test.js  helpers.js
scripts/: deploy-staking.sh
src/: big_vec.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
