[package]
name = "solana-staking-poc"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.7.7"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9"
serde = "1.0.127"
serde_derive = "1.0.103"
num-traits = "0.2"
bincode = "1.3.1"
num-derive = "0.3"
num_enum = "0.5.4"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.7"
solana-sdk = "=1.7.7"
solana-validator = "=1.7.7"

[lib]
crate-type = ["cdylib", "lib"]
